# Exercises

./: .gitignore  BFCal.hs  Exercises.cabal  README.md  test.hs
app/: Main.hs
src/: ALaCarte.hs  BFCal.hs  CodeWars.hs  Euler.hs  HQuestions.hs  Imperative.hs  Loop.hs  OtherStaff.hs
src/Euler96-Sudoku/: debug  result.txt  sudoku1.hs  sudoku2.hs
test/: doctests.hs
