name:                Exercises
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Euler
                       CodeWars
                       OtherStaff
                       HQuestions
                       ALaCarte
  build-depends:       array >= 0.5.1.1
                     , base >= 4.7 && < 5
                     , scientific
                     , random
                     , parsec
                     , QuickCheck
                     , regex-posix
  default-language:    Haskell2010

test-suite Exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctests.hs
  build-depends:       base
                     , doctest >= 0.8
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Exercises
